--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,83 @@
 body {
-  padding: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #27292c;
-  color: white;
+  margin: 0;
+  font-family: Inter, sans-serif;
+  background-color: #282D35;
+  color: aliceblue;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 h1 {
   margin-top: 30px;
 }
 
+nav {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+header {
+  height: 90px;
+  background-color: #21222A;
+  padding: 30px 25px;
+}
+
 .small-image {
   width: 40px;
   height: 40px;
+}
+
+.nav-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 20px;
+}
+
+.header {
+  display: flex;
+  gap: 20px;
+}
+
+nav > img {
+  width: 40px;
+  margin-right: 7px;
+}
+
+nav > span {
+  color: #61DAFB;
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+
+main {
+  padding: 60px 30px;
+  background-image: url(./assets/reactjs-icon-2.png);
+  background-repeat: no-repeat;
+  background-position: 30% center;
+}
+
+main > h1 {
+  margin: 0;
+  font-size: 2.4rem;
+  max-width: 500px;
+}
+
+.facts-list {
+  margin-top: 46px;
+  max-width: 500px;
+}
+
+.facts-list > li {
+  padding-block: 10px;
+  line-height: 19px;
+}
+
+.facts-list > li::marker {
+  color: #61DAFB;
+  font-size: 1.5rem;
 }
